# bx_django_utils

./: .editorconfig  .flake8  .gitignore  .isort.cfg  Dockerfile.dev  Dockerfile.tests  LICENSE  Makefile  Pipfile  README.md  docker-compose.yml  manage.py  manage.sh  noxfile.py  pyproject.toml  pytest-ci.ini  pytest.ini  tox.ini
.github/workflows/: pythonapp.yml  tests.yml
bx_django_utils/: __init__.py  cached_dataclasses.py  compat.py  dict_utils.py  environ.py  filename.py  graphql_introspection.py  hash_utils.py  http.py  json_utils.py  processify.py  stacktrace.py  translation.py  version.py
bx_django_utils/admin_extra_views/: README.md  __init__.py  admin_config.py  apps.py  autodiscover.py  base_view.py  checks.py  conditions.py  datatypes.py  registry.py  site.py  utils.py  views.py
bx_django_utils/admin_extra_views/tests/: test_admin_extra_views.py  test_admin_extra_views_superuser_access_1.snapshot.json
bx_django_utils/admin_utils/: admin_urls.py  filters.py  log_entry.py
bx_django_utils/admin_utils/tests/: test_log_entry.py
bx_django_utils/approve_workflow/: __init__.py  admin.py  constants.py  forms.py  models.py
bx_django_utils/aws/: client_side_cert_manager.py  secret_manager.py
bx_django_utils/credentials/: README.md  __init__.py  admin.py  apps.py  checks.py  fields.py  forms.py  models.py  utils.py
bx_django_utils/credentials/migrations/: 0001_initial.py
bx_django_utils/data_types/gtin/: README.md  __init__.py  form_fields.py  model_fields.py  validators.py
bx_django_utils/db_table_info/: admin_views.py
bx_django_utils/dbperf/: cursor.py  query_recorder.py
bx_django_utils/feature_flags/: README.md  __init__.py  admin_views.py  apps.py  data_classes.py  exceptions.py  models.py  state.py  test_utils.py  utils.py
bx_django_utils/feature_flags/migrations/: 0001_initial.py  (+1 more)
bx_django_utils/generic_model_filter/: admin_views.py  apps.py
bx_django_utils/humanize/: pformat.py  time.py
bx_django_utils/models/: color_field.py  get_models4user.py  manipulate.py  meta.py  queryset_utils.py  timetracking.py
bx_django_utils/templatetags/: accessors.py  humanize_time.py  json_templates.py
bx_django_utils/test_utils/: __init__.py  assert_queries.py  assertion.py  cache.py  content_types.py  datetime.py  fixtures.py  forms.py  html_assertion.py  log_entry.py  mock_aws_secret_manager.py  mock_boto3session.py  model_clean_assert.py  model_primary_key.py  playwright.py  requests_mock_assertion.py  snapshot.py  time.py  users.py
bx_django_utils/user_timezone/: README.md  __init__.py  apps.py  checks.py  humanize.py  middleware.py
bx_django_utils/view_utils/: dynamic_menu_urls.py
bx_django_utils_tests/: test_version.py
bx_django_utils_tests/approve_workflow_test_app/: admin.py  models.py
bx_django_utils_tests/test_app/: admin.py  admin_filters_demo.py  admin_views.py  feature_flags.py  models.py  urls.py
bx_django_utils_tests/test_project/: manage.py  publish.py  routers.py  settings.py  urls.py
bx_django_utils_tests/tests/: __init__.py  conftest.py  test_admin.py  test_admin_extra_views.py  test_admin_extra_views_index_page_1.snapshot.html  test_admin_extra_views_index_page_django3.2.18_1.snapshot.html  test_admin_extra_views_index_page_django4.0.10_1.snapshot.html  test_admin_extra_views_index_page_django42_1.snapshot.html  test_admin_extra_views_index_page_django50_1.snapshot.html  test_admin_extra_views_index_page_django51_1.snapshot.html  test_admin_extra_views_index_page_django52_1.snapshot.html  test_admin_extra_views_index_page_django60_1.snapshot.html  test_approve_workflow.py  test_assert_queries.py  test_assert_queries_snapshot_table_counts_1.snapshot.json  test_assert_queries_snapshot_table_counts_2.snapshot.json  test_assertion.py  test_aws_client_side_cert_manager.py  test_aws_secret_manager.py  test_cached_dataclasses.py  test_color_field.py  test_compat.py  test_content_types_utils.py  test_data_types_gtin.py  test_db_table_info.py  test_db_table_info_staff_200_sqlite_django52_1.snapshot.html  test_dbperf.py  test_doc_write.py  test_doctests.py  test_dynamic_view_menu.py  test_environ.py  test_error_handling.py  test_feature_flag_integration.py  test_feature_flag_integration_basic_1.snapshot.html  test_feature_flag_integration_basic_django42_1.snapshot.html  test_feature_flag_integration_basic_django50_1.snapshot.html  test_feature_flag_integration_basic_django52_1.snapshot.html  test_graphql_introspection.py  test_hash_utils.py  test_html_assertion.py  (+39 more)
bx_py_utils/: __init__.py  anonymize.py  compat.py  dict_utils.py  error_handling.py  filename.py  graphql_introspection.py  iteration.py  stacktrace.py
bx_py_utils/approve_workflow/: admin.py  forms.py  models.py
bx_py_utils/aws/: client_side_cert_manager.py  secret_manager.py
bx_py_utils/dbperf/: cursor.py  query_recorder.py
bx_py_utils/humanize/: pformat.py  time.py
bx_py_utils/models/: manipulate.py  timetracking.py
bx_py_utils/templatetags/: humanize_time.py
bx_py_utils/test_utils/: assert_queries.py  assertion.py  datetime.py  html_assertion.py  mock_aws_secret_manager.py  requests_mock_assertion.py  snapshot.py  users.py
bx_py_utils/view_utils/: dynamic_menu_urls.py
bx_py_utils_tests/approve_workflow_test_app/: admin.py  models.py
bx_py_utils_tests/test_app/: admin.py  models.py  urls.py
bx_py_utils_tests/test_project/: publish.py  settings.py  urls.py
bx_py_utils_tests/tests/: test_approve_workflow.py  test_assert_queries.py  test_assertion.py  test_aws_client_side_cert_manager.py  test_aws_secret_manager.py  test_compat.py  test_data_types_gtin.py  test_dbperf.py  test_dynamic_view_menu.py  test_environ.py  test_error_handling.py  test_graphql_introspection.py  test_hash_utils.py  test_html_assertion.py  test_humanize_time.py  test_model_clean_assert.py  test_model_manipulate.py  test_models_timetracking.py  test_processify.py  test_requests_mock_assertion.py  test_stacktrace.py  test_templatetags_humanize_time.py  test_test_utils_datetime.py  test_test_utils_snapshot.py  test_test_utils_time.py  utils.py
docs/: README.md  test-tools.md
(+93 files in other folders)
